051_read_leaks/grade.txt
Grading at 02/12/2018:01:15:56.276314
For commit ID 3d8c01a9fbd547f11eba58b0ec80d9750662dd24
Your file did not match the expected ouput
Your output did not match what we expected.
Attempting to compile test.c
test.c: In function ‘main’:
test.c:23:9: error: request for member ‘points’ in something not a structure or union
   free(q->points);
         ^
The code did not compile!

Overall Grade: F
